<resources>
    <string name="app_name">Your Future In Your Smartphone</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="buscar">Buscar</string>
    <string name="logout">Logout</string>

    <string name="login_titulo">Login. datos del interesado</string>
    <string name="login_email">Email</string>
    <string name="login_email_field">e-mail</string>
    <string name="login_password">Contraseña</string>
    <string name="login_password_field">password</string>
    <string name="login_aceptar">Aceptar</string>

    <string name="registro">Registro</string>
    <string name="datos_centro_trabajo">Datos del centro de trabajo</string>
    <string name="nombre">Nombre:</string>
    <string name="direccion">Dirección:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="nombrePais">País:</string>
    <string name="correo_electronico">Correo electrónico:</string>
    <string name="tipo">Tipo:</string>
    <string name="pic">PIC:</string>
    <string name="datos_persona">Datos de la persona</string>
    <string name="apellidos">Apellidos:</string>
    <string name="contrasenha">Contraseña:</string>
    <string name="repetir_contrasenha">Repite contraseña:</string>
    <string name="area">Área:</string>
    <string name="datos_proyecto">Datos del proyecto (opcional)</string>
    <string name="condiciones">Acepto las condiciones.</string>
    <string name="registrarme">REGISTRARME</string>

    <string name="buscar_titulo">Buscar colaboradores</string>
    <string name="buscar_area">Área</string>
    <string name="buscar_centro">Centro</string>
    <string name="buscar_pais">País</string>
    <string name="buscar_tipo_proyecto">Tipo de proyecto</string>
    <string name="buscar_aceptar">Buscar</string>

    <string name="email_para">Para</string>
    <string name="email_from">De</string>
    <string name="email_asunto">Asunto</string>
    <string name="email_mensaje">Texto</string>
    <string name="email_enviar">Enviar</string>
</resources>
