<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_registro"
            android:icon="@drawable/registro"
            android:title="@string/registrarse" />
        <item
            android:id="@+id/nav_inicio_sesion"
            android:icon="@drawable/login"
            android:title="@string/iniciar_sesion" />
        <item
            android:id="@+id/nav_buscar"
            android:icon="@drawable/buscar"
            android:title="@string/buscar" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/salir"
            android:title="@string/logout"/>
    </group>

</menu>