<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_titulo"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/login_email" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:hint="@string/login_email_field"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:hint="@string/login_password_field"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_boton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/login_aceptar" />

</LinearLayout>