<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_titulo"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/buscar_pais" />

        <Spinner
            android:id="@+id/buscar_pais"
            android:layout_width="180dp"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/buscar_area" />

    <Spinner
        android:id="@+id/buscar_area"
        android:layout_width="180dp"
        android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/buscar_centro" />

    <Spinner
        android:id="@+id/buscar_centro"
        android:layout_width="180dp"
        android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="@string/buscar_tipo_proyecto" />

    <Spinner
        android:id="@+id/buscar_tipo_proyecto"
        android:layout_width="180dp"
        android:layout_height="60dp" />

    </LinearLayout>

    <Button
        android:id="@+id/buscar_boton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/buscar_aceptar"/>

</LinearLayout>