<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_from" />

        <TextView
            android:id="@+id/texto_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_para" />

        <TextView
            android:id="@+id/texto_para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_asunto" />

    <EditText
        android:id="@+id/email_asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_asunto"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_mensaje" />

    <EditText
        android:id="@+id/email_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_mensaje"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/boton_enviar_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/email_enviar" />

</LinearLayout>