<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/elementos_pais"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/buscar_pais" />

        <TextView
            android:id="@+id/elementos_centro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/buscar_centro" />

        <TextView
            android:id="@+id/listaContactosArea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/buscar_area" />

        <TextView
            android:id="@+id/elementos_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/login_email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/elementos_field_pais"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="false"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/elementos_field_centro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="false"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/elementos_field_area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="false"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/etxtListaContactosEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="false"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

</LinearLayout>